syntax = "proto3";

package com.ngleanhvu.common.proto;

option java_package = "com.ngleanhvu.common.proto";
option java_multiple_files = true;

message Ward {
  int32 id = 1;
  string name = 2;
  int32 district_id = 3;
}

message WardRequest {
  int32 id = 1;
}

service WardService {
  rpc GetWardById (WardRequest) returns (Ward);
}